--- a/Music_Recommendation_System.ipynb
+++ b/Music_Recommendation_System.ipynb
@@ -5075,11 +5075,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Our exploratory data analysis revealed valuable insights into the music industry dataset. We identified the most popular artists and genres, and visualized trends in sound features over time. The analysis showed that certain genres, such as Hip-Hop, Indie, Pop and Rock, dominated the music industry, while artists like Bad Bunny and Jhay Cortez achieved exceptionally high popularity scores.\n",
+    "##### The Spotify dataset reveals significant insights into the evolution of music over time. Key findings include:\n",
+    "- A noticeable shift in sound features, such as acousticness and danceability, across decades, indicating changing musical preferences.\n",
+    "- Loudness has steadily increased over time, reflecting advancements in production techniques.\n",
+    "- The top 10 genres demonstrate distinct trends in valence, energy, danceability, and acousticness, which can guide further exploration of listener preferences.\n",
+    "- The word clouds effectively highlight the most prevalent genres and artists, providing a quick visual summary of the dataset's diversity.\n",
+    "- Analysis of top artists showcases their dominance in terms of production and popularity, emphasizing their impact on the music industry.\n",
     "\n",
-    "##### The trends in sound features over time suggest that the music industry has undergone significant changes over the decades, with shifting preferences for certain sound features like the drop overtime between 1940 and 2020 in acousticness, relatively constant movement in liveness and the gradual increase in the energy sound features. Our analysis provides a foundation for further investigation into the music industry, enabling more informed decisions for industry stakeholders.\n",
+    "The analysis also showed that certain genres, such as Hip-Hop, Indie, Pop and Rock, dominated the music industry, while artists like Bad Bunny and Jhay Cortez achieved exceptionally high popularity scores. There is a shifting preferences for certain sound features like the drop overtime between 1940 and 2020 in acousticness, relatively constant movement in liveness and the gradual increase in the energy sound features. \n",
     "\n",
-    "##### Overall, our EDA highlights the importance of data-driven insights in understanding the complex dynamics of the music industry."
+    "This analysis establishes a strong understanding of the dataset, serving as a foundation for the clustering and recommendation system development in subsequent phases."
    ]
   }
  ],
